crates/panache-parser/tests/snapshots/yaml__yaml_suite_65WH.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 65WH
input: "- foo\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
