crates/panache-parser/tests/snapshots/yaml__yaml_suite_6BCT.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: 6BCT
input: "- foo:\t bar\n- - baz\n  -\tbaz\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
