crates/panache-parser/tests/snapshots/yaml__yaml_suite_6BFJ.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: 6BFJ
input: "---\n&mapping\n&key [ &item a, b, c ]: value\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
