crates/panache-parser/tests/snapshots/yaml__yaml_suite_6CA3.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: 6CA3
input: "\t[\n\t]\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
