crates/panache-parser/tests/snapshots/yaml__yaml_suite_6CK3.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: 6CK3
input: "%TAG !e! tag:example.com,2000:app/\n---\n- !local foo\n- !!str bar\n- !e!tag%21 baz\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
