crates/panache-parser/tests/snapshots/yaml__yaml_suite_6H3V.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 6H3V
input: "'foo: bar\\': baz'\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
