crates/panache-parser/tests/snapshots/yaml__yaml_suite_6JQW.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: 6JQW
input: "# ASCII Art\n--- |\n  \\//||\\/||\n  // ||  ||__\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
