crates/panache-parser/tests/snapshots/yaml__yaml_suite_6JTT.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: 6JTT
input: "---\n[ [ a, b, c ]\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_UNTERMINATED_FLOW_SEQUENCE:flow sequence reached end of input without `]`@4..18]
