crates/panache-parser/tests/snapshots/yaml__yaml_suite_6KGN.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 6KGN
input: "---\na: &anchor\nb: *anchor\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
