crates/panache-parser/tests/snapshots/yaml__yaml_suite_6LVF.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: 6LVF
input: "%FOO  bar baz # Should be ignored\n              # with a warning.\n--- \"foo\"\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
